# todo-app

backend/: .coverage  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9d447f8240cb_create_users_and_todos_tables.py
backend/app/: main.py
backend/app/api/v1/: auth.py  dependencies.py  todos.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: auth.py  todo.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_auth.py  test_todos.py
frontend/: Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/components/: TodoDialog.tsx  TodoItem.tsx
frontend/src/contexts/: AuthContext.tsx  TodoContext.tsx
frontend/src/types/: auth.ts  todo.ts
frontend/src/utils/: api.ts
