[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
authors = [{ name = "Quan Dao" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn[standard]>=0.34.3,<0.35.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.1,<2.0.0",
    "pydantic[email]>=2.11.5,<3.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "httpx>=0.25.0,<0.26.0",
    "pytest-cov>=4.1.0,<5.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"